--- a/LDA_paper/bib.bib
+++ b/LDA_paper/bib.bib
@@ -1,150 +1,66 @@
-@book{basseville1993detection,
-  title={Detection of abrupt changes: theory and application},
+% Encoding: UTF-8@book{basseville1993detection,
+  title={Detection of {A}brupt {C}hanges: {T}heory and {A}pplication},
   author={Basseville, Mich{\`e}le and Nikiforov, Igor V and others},
   volume={104},
   year={1993},
   publisher={Prentice Hall Englewood Cliffs}
 }
 
-@inproceedings{osadchy2015k,
-  title={K-hyperplane Hinge-Minimax Classifier},
-  author={Osadchy, Margarita and Hazan, Tamir and Keren, Daniel},
-  booktitle={Proceedings of the 32nd International Conference on Machine Learning (ICML-15)},
-  pages={1558--1566},
-  year={2015}
-}
-
-@article{fisher1936use,
-  title={The use of multiple measurements in taxonomic problems},
-  author={Fisher, Ronald A},
-  journal={Annals of Eugenics},
-  volume={7},
-  number={2},
-  pages={179--188},
-  year={1936},
-  publisher={Wiley Online Library}
-},
-
-@article{turk1991eigenfaces,
-  title={Eigenfaces for recognition},
-  author={Turk, Matthew and Pentland, Alex},
-  journal={Journal of cognitive neuroscience},
-  volume={3},
-  number={1},
-  pages={71--86},
-  year={1991},
-  publisher={MIT Press}
-}
-
-@book{duda2012pattern,
-  title={Pattern Classification},
-  author={Duda, Richard O and Hart, Peter E and Stork, David G},
-  year={2012},
-  publisher={John Wiley \& Sons}
-}
-
-@article{tahmasebi2010application,
-  title={Application of discriminant analysis for alteration separation; sungun copper deposit, {E}ast {A}zerbaijan, Iran},
-  author={Tahmasebi, Pejman and Hezarkhani, Ardeshir and Mortazavi, Mojtaba},
-  journal={Australian Journal of Basic and Applied Sciences},
-  volume={6},
-  number={4},
-  pages={564--576},
-  year={2010}
-}
-
-@inproceedings{gabel2015monitoring,
-  title={Monitoring Least Squares Models of Distributed Streams},
-  author={Gabel, Moshe and Keren, Daniel and Schuster, Assaf},
-  booktitle={Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
-  pages={319--328},
-  year={2015},
-  organization={ACM}
-},
-
 @article{bigGas,
-  title={Reservoir computing compensates slow response of chemosensor arrays exposed to fast varying gas concentrations in continuous monitoring},
+  title={Reservoir {C}omputing {C}ompensates {S}low {R}esponse of {C}hemosensor {A}rrays {E}xposed to {F}ast {v}arying {G}as {C}oncentrations in {C}ontinuous {M}onitoring},
   author={Fonollosa, Jordi and Sheik, Sadique and Huerta, Ram{\'o}n and Marco, Santiago},
   journal={Sensors and Actuators B: Chemical},
   volume={215},
   pages={618--629},
   year={2015},
   publisher={Elsevier}
-},
-
-@misc{powerSupply,
-  author={Zhu, X.},
-  title = {Stream Data Mining Repository},
-  howpublished = {\url{http://www.cse.fau.edu/~xqzhu/stream.html}}
-},
-
-
-@inproceedings{usenet,
-  title={An Ensemble of Classifiers for coping with Recurring Contexts in Data Streams.},
-  author={Katakis, Ioannis and Tsoumakas, Grigorios and Vlahavas, Ioannis P},
-  booktitle={ECAI},
-  pages={763--764},
-  year={2008}
 }
 
-@inproceedings{usenetSource,
-  title={An Ensemble of Classifiers for coping with Recurring Contexts in Data Streams.},
-  author={Katakis, Ioannis and Tsoumakas, Grigorios and Vlahavas, Ioannis P},
-  booktitle={ECAI},
-  pages={763--764},
-  year={2008}
+@book{duda2012pattern,
+  title={Pattern {C}lassification},
+  author={Duda, Richard O and Hart, Peter E and Stork, David G},
+  year={2012},
+  publisher={John Wiley \& Sons}
 }
 
-@article{keren2014geometric,
-  title={Geometric monitoring of heterogeneous streams},
-  author={Keren, Daniel and Sagy, Guy and Abboud, Amir and Ben-David, David and Schuster, Assaf and Sharfman, Izchak and Deligiannakis, Antonios},
-  journal={IEEE Transactions on Knowledge and Data Engineering},
-  volume={26},
-  number={8},
-  pages={1890--1903},
-  year={2014},
-  publisher={IEEE}
+@article{fisher1936use,
+  title={The {U}se of {M}ultiple {M}easurements in {T}axonomic {P}roblems},
+  author={Fisher, Ronald A},
+  journal={Annals of {E}ugenics},
+  volume={7},
+  number={2},
+  pages={179--188},
+  year={1936},
+  publisher={Wiley Online Library}
 }
 
-@inproceedings{michel2005klee,
-  title={Klee: A framework for distributed top-k query algorithms},
-  author={Michel, Sebastian and Triantafillou, Peter and Weikum, Gerhard},
-  booktitle={Proceedings of the 31st International Conference on Very Large Databases},
-  pages={637--648},
-  year={2005},
-  organization={VLDB Endowment}
-}
-
-@inproceedings{shah2008handling,
-  title={Handling non-linear polynomial queries over dynamic data},
-  author={Shah, Shetal and Ramamritham, Krithi},
-  booktitle={IEEE 24th International Conference on Data Engineering (ICDE)},
-  pages={1043--1052},
-  year={2008},
-  organization={IEEE}
+@inproceedings{gabel2015monitoring,
+  title={Monitoring {L}east {S}quares {M}odels of {D}istributed {S}treams},
+  author={Gabel, Moshe and Keren, Daniel and Schuster, Assaf},
+  booktitle={Proceedings of the 21th ACM {SIGKDD} {I}nternational {C}onference on {K}nowledge {D}iscovery and {D}ata {M}ining},
+  pages={319--328},
+  year={2015},
+  organization={ACM}
 }
 
 @inproceedings{huang2007communication,
-  title={Communication-efficient online detection of network-wide anomalies},
+  title={Communication-efficient {o}nline {d}etection of {n}etwork-wide {a}nomalies},
   author={Huang, Ling and Nguyen, XuanLong and Garofalakis, Minos and Hellerstein, Joseph M and Jordan, Michael and Joseph, Anthony D and Taft, Nina and others},
-  booktitle={26th IEEE International Conference on Computer Communications  (INFOCOM)},
+  booktitle={26th {IEEE} {I}nternational {C}onference on {C}omputer {C}ommunications  ({INFOCOM})},
   pages={134--142},
   year={2007},
 }
 
-@article{sharfman2007geometric,
-  title={A geometric approach to monitoring threshold functions over distributed data streams},
-  author={Sharfman, Izchak and Schuster, Assaf and Keren, Daniel},
-  journal={ACM Transactions on Database Systems (TODS)},
-  volume={32},
-  number={4},
-  pages={23},
-  year={2007},
-  publisher={ACM}
+@inproceedings{kashyap2008efficient,
+  title={Efficient {c}onstraint {m}onitoring {u}sing {a}daptive {t}hresholds},
+  author={Kashyap, Srinivas and Ramamirtham, Jeyashankher and Rastogi, Rajeev and Shukla, Pushpraj},
+  booktitle={{IEEE} 24th {I}nternational {C}onference on {D}ata {E}ngineering ({ICDE})},
+  pages={526--535},
+  year={2008},
 }
 
 @article{keren2012shape,
-  title={Shape sensitive geometric monitoring},
+  title={Shape {s}ensitive {g}eometric {m}onitoring},
   author={Keren, Daniel and Sharfman, Izchak and Schuster, Assaf and Livne, Avishay},
   journal={IEEE Transactions on Knowledge and Data Engineering},
   volume={24},
@@ -154,8 +70,20 @@
   publisher={IEEE}
 }
 
+
+@article{keren2014geometric,
+  title={Geometric {m}onitoring of {h}eterogeneous {s}treams},
+  author={Keren, Daniel and Sagy, Guy and Abboud, Amir and Ben-David, David and Schuster, Assaf and Sharfman, Izchak and Deligiannakis, Antonios},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  volume={26},
+  number={8},
+  pages={1890--1903},
+  year={2014},
+  publisher={IEEE}
+}
+
 @article{lazerson2015monitoring,
-  title={Monitoring distributed streams using convex decompositions},
+  title={Monitoring {d}istributed {s}treams {u}sing {c}onvex {d}ecompositions},
   author={Lazerson, Arnon and Sharfman, Izchak and Keren, Daniel and Schuster, Assaf and Garofalakis, Minos and Samoladas, Vasilis},
   journal={Proceedings of the VLDB Endowment},
   volume={8},
@@ -165,45 +93,111 @@
   publisher={VLDB Endowment}
 }
 
-@inproceedings{kashyap2008efficient,
-  title={Efficient constraint monitoring using adaptive thresholds},
-  author={Kashyap, Srinivas and Ramamirtham, Jeyashankher and Rastogi, Rajeev and Shukla, Pushpraj},
-  booktitle={IEEE 24th International Conference on Data Engineering (ICDE)},
-  pages={526--535},
+@inproceedings{michel2005klee,
+  title={Klee: A {f}ramework for {d}istributed {t}op-k {q}uery {a}lgorithms},
+  author={Michel, Sebastian and Triantafillou, Peter and Weikum, Gerhard},
+  booktitle={Proceedings of the 31st {I}nternational {C}onference on {V}ery {L}arge {D}atabases},
+  pages={637--648},
+  year={2005},
+  organization={{VLDB} {E}ndowment}
+}
+
+@inproceedings{osadchy2015k,
+  title={K-hyperplane {H}inge-{M}inimax {C}lassifier},
+  author={Osadchy, Margarita and Hazan, Tamir and Keren, Daniel},
+  booktitle={Proceedings of the 32nd {I}nternational {C}onference on {M}achine {L}earning ({ICML}-15)},
+  pages={1558--1566},
+  year={2015}
+}
+
+@Misc{powerSupply,
+  author =       {Zhu, X.},
+  title =        {Stream {D}ata {M}ining {R}epository},
+  howpublished = {\url{http://www.cse.fau.edu/xqzhu/stream.html}},
+  year =         {2010}
+}
+
+@inproceedings{shah2008handling,
+  title={Handling {n}on-linear {p}olynomial {q}ueries over {d}ynamic {d}ata},
+  author={Shah, Shetal and Ramamritham, Krithi},
+  booktitle={IEEE 24th {I}nternational {C}onference on {D}ata {E}ngineering ({ICDE})},
+  pages={1043--1052},
   year={2008},
+  organization={IEEE}
+}
+
+@article{sharfman2007geometric,
+  title={A {g}eometric {a}pproach to {m}onitoring {t}hreshold {f}unctions over {d}istributed {d}ata {s}treams},
+  author={Sharfman, Izchak and Schuster, Assaf and Keren, Daniel},
+  journal={ACM Transactions on Database Systems (TODS)},
+  volume={32},
+  number={4},
+  pages={23},
+  year={2007},
+  publisher={ACM}
+}
+
+@article{tahmasebi2010application,
+  title={Application of {d}iscriminant {a}nalysis for {a}lteration {s}eparation; 1{s}ungun {c}opper {d}eposit, {E}ast {A}zerbaijan, {I}ran},
+  author={Tahmasebi, Pejman and Hezarkhani, Ardeshir and Mortazavi, Mojtaba},
+  journal={Australian Journal of Basic and Applied Sciences},
+  volume={6},
+  number={4},
+  pages={564--576},
+  year={2010}
+}
+
+@article{turk1991eigenfaces,
+  title={Eigenfaces for {r}ecognition},
+  author={Turk, Matthew and Pentland, Alex},
+  journal={Journal of {c}ognitive {n}euroscience},
+  volume={3},
+  number={1},
+  pages={71--86},
+  year={1991},
+  publisher={MIT Press}
+}
+
+
+@inproceedings{usenet,
+  title={An {E}nsemble of {C}lassifiers for {c}oping with {R}ecurring {C}ontexts in {D}ata {S}treams.},
+  author={Katakis, Ioannis and Tsoumakas, Grigorios and Vlahavas, Ioannis P},
+  booktitle={ECAI},
+  pages={763--764},
+  year={2008}
 }
 
 @inproceedings{keralapura2006communication,
-  title={Communication-efficient distributed monitoring of thresholded counts},
+  title={Communication-efficient {d}istributed {m}onitoring of {t}hresholded {c}ounts},
   author={Keralapura, Ram and Cormode, Graham and Ramamirtham, Jeyashankher},
-  booktitle={Proceedings of the SIGMOD International Conference on Management of Data},
+  booktitle={Proceedings of the {SIGMOD} {I}nternational {C}onference on {M}anagement of {D{ata},
   pages={289--300},
   year={2006},
   organization={ACM}
 }
 
 @inproceedings{wang2015concept,
-  title={Concept drift detection for streaming data},
+  title={Concept {d}rift {d}etection for {s}treaming {d}ata},
   author={Wang, Heng and Abraham, Zubin},
-  booktitle={International Joint Conference on Neural Networks (IJCNN) },
+  booktitle={International {J}oint {C}onference on {N}eural {N}etworks ({IJCNN}) },
   pages={1--9},
   year={2015},
   organization={IEEE}
 }
 
 @incollection{gama2004learning,
-  title={Learning with drift detection},
+  title={Learning with {d}rift {d}etection},
   author={Gama, Joao and Medas, Pedro and Castillo, Gladys and Rodrigues, Pedro},
-  booktitle={Advances in artificial intelligence--SBIA 2004},
+  booktitle={Advances in {a}rtificial {i}ntelligence--{SBIA}},
   pages={286--295},
   year={2004},
   publisher={Springer}
 }
 
 @inproceedings{wang2013concept,
-  title={Concept drift detection for online class imbalance learning},
+  title={Concept {D}rift {D}etection for {O}nline {C}lass {I}mbalance {L}earning},
   author={Wang, Shuo and Minku, Leandro L and Ghezzi, Diego and Caltabiano, Daniele and Tino, Peter and Yao, Xin},
-  booktitle={International Joint Conference on Neural Networks (IJCNN)},
+  booktitle={International {J}oint {C}onference on {N}eural {N}etworks ({IJCNN})},
   pages={1--10},
   year={2013},
   organization={IEEE}
@@ -356,3 +350,4 @@ pages="264--269"
   volume = 25,
   year = 2013
 }
+￿￿
